<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/deposit_amount_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deposit_amount_label"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/radio_group"/>

    <EditText
        android:id="@+id/deposit_amount_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/deposit_amount_input_hint"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:padding="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/deposit_amount_label"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deposit_amount_input">

        <RadioButton
            android:id="@+id/radio_deposit_3_months"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/deposit_3_months"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_deposit_6_months"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deposit_6_months"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_deposit_12_months"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deposit_12_months"
            android:textSize="16sp" />
    </RadioGroup>

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/ok"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group" />

</androidx.constraintlayout.widget.ConstraintLayout>